<resources>
    <string name="app_name">FamilyMap</string>

    <!-- Strings related to login -->
    <string name="login_SwitchStatement">Need an account? Click </string>
    <string name="login_SwitchStatementButton"> here.</string>
    <string name="Login">      </string>
    <string name="loginButtonLabel">Login</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- TODO: Remove or change this placeholder text -->


    <!-- STrings related to register -->
    <string name="register_Male">Male</string>
    <string name="register_Female">Female</string>
    <string name="register_Title">     </string>
    <string name="register_Button">Register</string>
    <string name="register_SwitchStatement">Already have an account click </string>
    <string name="register_SwitchStatementButton">here.</string>


    <string name="title_activity_main">FamilyMap</string>
    <string name="ggle_stub">This is a stub not yet implemented</string>
    <string name="title_activity_maps">Map</string>

    <!-- Map Fragment Strings -->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyD62eibLAwKtJwuaCYsjsXlImbhdZ6a0_o
    </string>
    <string name="map_button_format" formatted="false">Name: %s\n%s: %s(%d) </string>
    <string name="map_button_default">Click on a marker to\n see cool stuff</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_person">Person</string>

    <string name="title_activity_search">Search</string>
    <string name="filter_name">Filter</string>
    <string name="first_name">First Name:</string>
    <string name="placeholding_text">placeholding Text.</string>
    <string name="gender">Gender:</string>
    <string name="events">Events</string>
    <string name="family">Family</string>
    <string name="spousal_lines">Spousal Lines</string>
    <string name="lifeline_lines">Lifeline Lines</string>
    <string name="map_type">Map Type</string>
    <string name="resync">ReSync</string>
    <string name="logout">LogOut</string>
    <string name="hello">hello</string>
    <string name="hidden">hidden</string>
    <string name="displayed">displayed</string>
    <string name="this_is_a_filter_item">this is a filter item</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="fake_web_com">fake@web.com</string>
    <string name="confirm">Confirm</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="world">world</string>
    <string name="child">Child</string>
    <string name="serverip">ServerIp:</string>
    <string name="serverport">ServerPort:</string>
    <string name="search">search..</string>
    <string name="resulttext">Resulttext</string>
    <string name="menu_back">logout</string>
    <string name="menu_search">search</string>
    <string name="menu_filter">filter</string>
    <string name="menu_settings">settings</string>
    <string name="last_name">Last Name</string>
    <string name="life_events">Life Events</string>
    <string name="list_title_placeholder">List Title</string>
    <string name="searchResultEventText">%s %s\n%s\nCity: %s\nCountry: %s\nYear: %d</string>
    <string name="family_item">%s\n%s %s</string>
    <string name="get_person_id">PersonId</string>
    <string name="search_item_image_description">Image that represents what type of object was found</string>
</resources>

