
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_height="match_parent"
            android:layout_width="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="familymap.RegisterFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/registerTitle"
        android:text="@string/register_Title"
        android:textSize="15pt"
        android:textColor="@color/colorTitle"
        android:gravity="center"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:columnCount="2"
        android:id="@+id/registerGridLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp"
        android:layout_marginLeft="24dp"
        tools:ignore="RtlHardcoded">

        <TextView
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/username"
            android:gravity="right"/>
        <EditText
            android:id="@+id/userNameEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:ems="10"
            android:inputType="text"/>
        <TextView
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/email"
            android:gravity="right"/>
        <EditText
            android:id="@+id/emailEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/fake_web_com"/>
        <TextView
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/password"
            android:gravity="right"/>
        <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"/>
        <TextView
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/confirm"
            android:gravity="right"/>
        <EditText
            android:id="@+id/passwordConfirmEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"/>

        <TextView
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/firstname"
            android:gravity="right"/>
        <EditText
            android:id="@+id/firstNameEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="4"
            android:ems="10"
            android:inputType="text"/>

        <TextView
            android:layout_column="0"
            android:layout_row="5"
            android:text="@string/lastname"/>
        <EditText
            android:id="@+id/lastNameEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="5"
            android:ems="10"
            android:inputType="text"/>
    </GridLayout>
    <RadioGroup
        android:id="@+id/registerRadio"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/registerGridLayout"
        android:layout_marginStart="42dp"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/register_maleRadial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_Male"/>
        <RadioButton
            android:id="@+id/register_femaleRadial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/register_Female"/>
    </RadioGroup>
    <Button
        android:layout_margin="2dp"
        android:layout_below="@+id/registerRadio"
        android:layout_centerHorizontal="true"
        android:id="@+id/registerButton"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button"
        android:textColor="@color/colorTitle"
        android:layout_width="140dp"
        android:text="@string/register_Button"
        android:shadowColor="@color/colorAccent"
        android:layout_weight="1"/>


    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/registerButton">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_SwitchStatement"/>
        <TextView

            android:layout_marginStart="2pt"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:id="@+id/register_SwitchStatement"
            android:layout_height="wrap_content"
            android:layout_width="41dp"
            android:textColor="@color/register_SwitchStatementButtonTitle"

            android:background="@color/register_SwitchStatementButton"
            android:text="@string/register_SwitchStatementButton"/>


    </LinearLayout>
</RelativeLayout>
    </ScrollView>
