<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_width="match_parent">

    <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">


        <TextView
            android:id="@+id/filter_description"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/this_is_a_filter_item"
            android:paddingStart="16dp"
            android:textSize="7pt"/>
        <ToggleButton
            android:id="@+id/filter_toggle"
            android:checked="true"
            android:layout_marginRight="24dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:background="@drawable/filter_toggle"
            android:textOff="@string/hidden"
            android:textOn="@string/displayed"
            tools:ignore="RtlHardcoded" />

    </GridLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/line_color"/>
</LinearLayout>