<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    >

    <ImageView
        android:id="@+id/person_card_photo"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="16dp"
        android:src="@drawable/male" />

    <TextView
        android:id="@+id/person_card_firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/person_card_photo"
        android:text="@string/hello"
        android:textSize="8pt"
        />

    <TextView
        android:id="@+id/person_card_lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart = "3dp"
        android:layout_toEndOf="@+id/person_card_firstName"
        android:layout_alignParentTop="true"
        android:text="@string/world"
        android:textSize="8pt"/>

    <TextView
        android:id="@+id/person_relationship"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/person_card_firstName"
        android:layout_toEndOf="@+id/person_card_photo"
        android:text="@string/child"
        />

</RelativeLayout>