<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >
<LinearLayout


    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    tools:context="familymap.branch.Settings.SettingsActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Generational Lines"
            />
        <Switch
            android:id="@+id/settings_generation_switch"
            android:layout_gravity="right"
            android:layout_alignParentRight="true"
            android:layout_width="72dp"
            android:layout_height="wrap_content">
        </Switch>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/settings_generation_spinner"
            android:layout_toLeftOf="@id/settings_generation_switch" />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/line_color"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spousal_lines"
            />
        <Switch
            android:id="@+id/settings_spousal_switch"
            android:layout_gravity="right"
            android:layout_alignParentEnd="true"
            android:layout_width="72dp"
            android:layout_height="wrap_content">
        </Switch>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/settings_spousal_spinner"
            android:layout_toStartOf="@id/settings_spousal_switch" />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/line_color"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lifeline_lines"
            />
        <Switch
            android:id="@+id/settings_lifeline_switch"
            android:layout_gravity="right"
            android:layout_alignParentEnd="true"
            android:layout_width="72dp"
            android:layout_height="wrap_content">
        </Switch>

        <Spinner
            android:id="@+id/settings_lifeline_spinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toStartOf="@id/settings_lifeline_switch" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/line_color"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_type"
            />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:id="@+id/settings_map_spinner" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/line_color"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/settings_resync"
            android:layout_centerHorizontal="true"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:background="@drawable/bg_button"
            android:textColor="@color/colorTitle"
            android:text="@string/resync"/>
    </RelativeLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="19dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/settings_logout"
            android:layout_centerHorizontal="true"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:background="@drawable/bg_button"
            android:textColor="@color/colorTitle"
            android:text="@string/logout"/>
    </RelativeLayout>

</LinearLayout>
</ScrollView>